# enCryptor

./: CMakeLists.txt  README.md  main.cpp
include/: decrypt.h  encrypt.h  file.h
src/: encrypt.cpp  file.cpp
